--- a/linqpadvisualizer/linqpadvisualizer/linqpadvisualizer2012.csproj
+++ b/linqpadvisualizer/linqpadvisualizer/linqpadvisualizer2012.csproj
@@ -89,18 +89,18 @@
       <DependentUpon>SetMaxDepthForm.cs</DependentUpon>
     </Compile>
     <Compile Include="LinqpadVisualizer4JS.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="LinqpadVisualizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SetMaxDepthForm.resx">
       <DependentUpon>SetMaxDepthForm.cs</DependentUpon>
